menu wrap fixed, dropdown width fixed

--- a/src/components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/components/DropdownMenu/DropdownMenu.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   position: relative;
+  width: fit-content;
 }
 .content {
   position: absolute;
